# utils-api

./: Cargo.toml  Dockerfile  README.md  compose.yaml
.config/: nextest.toml
.github/workflows/: rust.yml
client/deno/: .env  deno.json  input.graphql  main.ts
client/rust/: Cargo.toml
client/rust/src/: main.rs
src/: graphql.rs  javascript.rs  lib.rs  main.rs  random.rs  sql.rs  uuid.rs
tests/: common.rs  graphql.rs  random.rs  server.rs  sql.rs  uuid.rs
