[package]
name = "utils-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["v4", "v7", "fast-rng"] }
