[package]
name = "utils-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2"] }
config = { version = "0.14.0", default-features = false }
graphql-minify = "0.1.0"
graphql-parser = "0.4.0"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlformat = "0.2.3"
tokio = { version = "1.36.0", features = ["signal", "macros", "rt-multi-thread"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["v4", "v7", "fast-rng"] }

[dev-dependencies]
escargot = "0.5.10"
portpicker = "0.1.1"
